--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <link href="https://fonts.googleapis.com/css?family=PT+Sans" rel="stylesheet">
 </head>
 <body>
-  <form action="http://127.0.0.1:8080/success.json" id="myForm">
+  <form action="http://127.0.0.1:8080/error.json" id="myForm">
     <div id="resultContainer"></div>
     <label for="fio">ФИО</label>
     <input type="text" id="fio" name="fio">
